# file-organizer-GUI-

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  app_config.py  config.example.json  config.json  diff.txt  execution_service.py  file_parser.py  local_file_analysis_chat.py  main.py  organize_commands_cli.py  organizer_service.py  package-lock.json  probe_compat_tool_calling.py  requirements.txt  rollback_last_execution.py  rollback_service.py  scanner_service.py  test_file_parser.py  test_out.txt  test_prompt_config.py
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: backend.rs  bg_removal.rs  desktop_ini.rs  icon_apply.rs  lib.rs  main.rs  runtime.rs
docs/: 2026-03-23-security-fixes-summary.md  api_review_2026-03-22.md  copywriting-guidelines.md  future_architecture.md  implementation-status-2026-04-20.md  implementation_notes_v1.md  open-source-release-checklist.md  organize-capability-gap-2026-04-20.md  organize-flow-product-spec-2026-04-20.md  organize-product-redesign-2026-04-19.md  ui-copy-map-2026-03-31.md
file_organizer/: __init__.py  __main__.py
file_pilot/: __init__.py  __main__.py
frontend/: .gitignore  README.md  biome.json  package-lock.json  package.json  vitest.config.ts
scratch/: fix_history_redesign.py  fix_history_redesign_interior.py
scripts/: build_bundled_backend.ps1  set_desktop_version.ps1  smoke_desktop_bundle.ps1
test_folder/: 00实习提交文件清单v2024.docx  builder-debug.yml
tests/: test_ai_provider_adapter.py  test_analysis_path_boundaries.py  test_analysis_prompt_vision.py  test_analysis_structured_service.py  test_api_auth.py  test_api_config.py  test_api_icon_workbench.py  test_api_runtime.py  test_api_sessions.py  test_app_session_store.py  test_archive_reader.py  test_compat_probe.py  test_config_manager.py  test_console_ui.py  test_domain_architecture.py  test_event_printer.py  test_execution_app_service.py  test_execution_service.py  test_execution_structured_plan.py  test_file_parser.py  test_history_app_service.py  test_icon_workbench_client.py  test_icon_workbench_service.py  test_image_describer.py  test_local_file_analysis_chat.py  test_logging_utils.py  test_main_flow.py  test_organize_commands_cli.py  test_organize_workflow.py  test_organize_workflow_structured.py  test_organizer_service.py  test_package_entrypoints.py  test_parallel_analysis.py  test_planning_conversation_service.py  test_rich_workflow_integration.py  test_rollback_last_execution.py  test_rollback_service.py  test_runtime_paths.py  test_scan_workflow_service.py  test_session_cli.py  (+9 more)
tmp/: gen_test_files.py
(+238 files in other folders)
